...
    <string name="validation_warnings">There are unresolved warnings. Continue?</string>
    <string name="no_translated_chapters">Nothing has been translated</string>
    <string name="title_chapters">Chapter</string>
    <!-- Notifies the user that they are viewing a frame within a chapter. e.g. Viewing frame 01 in chapter 1. The Creation -->
    <string name="now_viewing_frame">Viewing frame <xliff:g example="1" id="number">%1$s</xliff:g> in chapter <xliff:g example="1. The Creation" id="chapter">%2$s</xliff:g>.</string>
    <string name="missing_chapter" translatable="false">Missing chapter</string>
    <string name="label_translation_notes">Notes</string>
    <string name="label_passage_note">Passage note:</string>
    <string name="label_delete">Delete</string>
    <!-- Explanation of what a source language is -->
    <string name="source_language_instructions">Completed translations</string>
    <!-- Explanation of what a target language is -->
    <string name="target_language_instructions">Not started or in-progress translations</string>
...
    <string name="related_terms">See Also:</string>
    <string name="term_examples">Examples:</string>
    <string name="project_uploaded">Project successfully uploaded</string>
    <string name="choose_frame_to_start">Open a project to start translating</string>
    <string name="return_to_important_terms">Return to Words</string>
    <string name="no_translation_notes">No notes</string>
    <string name="translation_words">Words</string>
    <string name="translation_check_notice">We will now perform a few checks to ensure your translation is ready.</string>
    <string name="preparing_upload">Preparing upload</string>
    <string name="choose_a_project">Please open a project</string>
    <string name="choose_type">Choose a type</string>
    <string name="text_type">Text</string>
    <string name="reg_type">Regular</string>
    <string name="ulb_type">Unlocked Literal Bible</string>
    <string name="udb_type">Unlocked Dynamic Bible</string>
    <string name="resource_options">Resource Options</string>
    <string name="obs_type">Open Bible Stories</string>
    <string name="tn_type">Notes</string>
    <string name="tq_type">Questions</string>
    <string name="tw_type">Words</string>
    <string name="click_to_add_resource">Click to add %1$s</string>
    <string name="add_question_here">Add Question Here</string>
    <string name="add_answer_here">Add Answer Here</string>
    <string name="reference_text">Reference Text</string>
    <string name="note_text">Note Text</string>
...
    <string name="email_optional">Email (Optional)</string>
    <string name="title_verse">Verse</string>
    <string name="title_note">Note</string>
    <string name="verse_out_of_bounds">Choose a verse between <xliff:g example="1" id="number">%1$s</xliff:g> and <xliff:g example="100" id="number">%2$s</xliff:g></string>
    <string name="no_key_terms">There are no Words</string>
    <string name="title_activity_developer">Developer Tools</string>
    <string name="action_settings">Settings</string>
    <string name="action_save">Save</string>
    <!-- displays the application build or version code -->
    <string name="app_version_code" translatable="false">BUILD <xliff:g example="61" id="verion_code">%1$d</xliff:g></string>
    <!-- displays the application version name -->
    <string name="app_version_name" translatable="false">VERSION <xliff:g example="2.1.2" id="verion_name">%1$s</xliff:g></string>
    <!-- displays the unique device id -->
...
    <string name="upload_report_or_download_latest_apk">Downloading this update may fix your problem, continue?</string>
    <string name="welcome">Welcome to BTT Writer</string>
    <string name="please_wait">Please wait</string>
    <string name="updating_app">Performing updates</string>
    <string name="preparing_for_first_use">Preparing app for first use. This may take a few minutes.</string>
    <string name="loading_languages">Preparing languages</string>
    <string name="title_activity_target_translations">Your Translation Projects</string>
    <string name="title_activity_new_target_translation">New Translation</string>
    <string name="translations_welcome"><![CDATA[Welcome!\nThis is your Home Screen. When you have translation projects on this device they will appear here.\n\nYou can start a new translation any time by tapping the green button in the top right.]]></string>
    <string name="title_activity_target_translation_detail">Translation Project</string>

    <string name="duplicate_target_translation">You are already translating <xliff:g example="Genesis" id="project">%1$s</xliff:g> into <xliff:g example="English" id="target_language">%2$s</xliff:g></string>
    <string name="Project">Project</string>
    <string name="type_label">Resource Type</string>
    <string name="language">Language</string>
    <string name="progress">Progress</string>
    <string name="choose_first_source_translation">Choose source translation(s) to begin reading and translating</string>
    <string name="choose_source_translations">Choose source translations</string>
    <string name="confirm">Confirm</string>
    <string name="selected">Selected</string>
    <string name="available">Available</string>
    <string name="action_translations">Home</string>
    <string name="publish">Publish</string>
    <string name="backup">Upload</string>
    <string name="attached_files">Attached files</string>
    <string name="requires_internet">This will use your Internet Connection</string>
    <string name="maximum_limit">(Maximum: <xliff:g example="3" id="maximum">%d</xliff:g>)</string>
    <string name="input_required">Input cannot be empty</string>
...
    <string name="min_hardware_req_not_met">This device does not meet the minimum hardware requirements and may function poorly. You may also experience problems on some phones and other very small devices.</string>
    <string name="do_not_show_again">Don't show again</string>
    <string name="pref_title_check_hardware_requirements">Check Hardware Requirements</string>
    <string name="pref_title_enable_tm_links">Enable TM Links</string>
    <string name="pref_description_check_hardware_requirements">Check for suggested hardware when starting the app</string>
    <string name="pref_description_enable_tm_links">Open Translation Manual links in browser (requires internet)</string>
    <string name="pref_title_gl_mode">Gateway Language Mode</string>
    <string name="pref_description_gl_mode">Display additional translation options for gateway languages</string>
    <string name="import_project_already_exists">This project (<xliff:g example="en_ulb_reg" id="translation">%1$s</xliff:g>) already exists locally. How would you like to proceed?</string>
    <string name="searching_repositories">Searching repositories</string>
    <string name="failed_search_repositories">Failed to find repositories. Check the logs for more details</string>
    <string name="cloning_repository">Cloning repository</string>
    <string name="start_new_translation">Start a new translation</string>
...
    <string name="title_create_account_url">Account Creation URL</string>
    <string name="title_source_typeface">Source Font</string>
    <string name="title_source_typeface_size">Source Font Size</string>
    <string name="theme_title_light">Light</string>
    <string name="theme_title_dark">Dark</string>
    <string name="theme_title_system">System</string>
    <string name="header_general">General</string>
    <string name="title_remember_position">Remember my place</string>
    <string name="description_remember_position">Display the last viewed page when starting the app</string>
    <string name="label_last_backup">Last Backup</string>
    <string name="label_last_uploaded">Last Uploaded</string>
    <string name="label_unknown">Unknown</string>
</resources>
