...
            "front" -> 1
            "title" -> 2
            "sub-title" -> 3
            "intro" -> 4
            "reference" -> 5
            "summary" -> 8
            "back" -> 9
            else -> {
                if (slug.toIntOrNull() != null) NUMERIC_WEIGHT else NON_NUMERIC_WEIGHT
            }
        }
    }
}
