...
                    if (currentItem.targetMode != TargetMode.COMPLETE) {
                        IconButton(onClick = onEditToggle) {
                            Icon(
                                imageVector = if (currentItem.targetMode == TargetMode.EDIT) {
                                    Icons.Default.Check
                                } else Icons.Default.Edit,
                                contentDescription = "toggle edit",
                                tint = MaterialTheme.colorScheme.onSurfaceVariant
                            )
                        }
                    }
                }

...
                        modifier = Modifier.weight(1f)
                    )
                    Switch(
                        checked = currentItem.targetMode == TargetMode.COMPLETE,
                        onCheckedChange = onDoneToggle,
                        modifier = Modifier.semantics {
                            contentDescription = "toggle done"
                        },
                        colors = SwitchDefaults.colors(
                            checkedThumbColor = MaterialTheme.colorScheme.onPrimary,
                            checkedTrackColor = MaterialTheme.colorScheme.primary
                        )
                    )
...
