...
    <string name="duplicate_target_translation">You are already translating <xliff:g example="Genesis" id="project">%1$s</xliff:g> into <xliff:g example="English" id="target_language">%2$s</xliff:g></string>
    <string name="Project">Project</string>
    <string name="language">Language</string>
    <string name="progress">Progress</string>
    <string name="choose_first_source_translation">Choose source translation(s) to begin reading and translating</string>
    <string name="choose_source_translations">Choose source translations</string>
    <string name="confirm">Confirm</string>
    <string name="selected">Selected</string>
    <string name="available">Available</string>
    <string name="action_translations">Home</string>
    <string name="publish">Publish</string>
    <string name="backup">Upload</string>
    <string name="attached_files">Attached files</string>
    <string name="requires_internet">This will use your Internet Connection</string>
    <string name="maximum_limit">(Maximum: <xliff:g example="3" id="maximum">%d</xliff:g>)</string>
    <string name="input_required">Input cannot be empty</string>
...
